# ssh-gpg-agent

./: CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: publish.yml  test.yml
ci/: gitlab-ci.yml
src/: error.rs  files.rs  keys.rs  main.rs  sign.rs
tests/invalid_keys/: no_encrypted_private  no_encrypted_private.pub
tests/valid_keys/: ed25519  ed25519.gpg  ed25519.pub  rsa2048  rsa2048.gpg  rsa2048.pub
