[package]
name = "ssh-gpg-agent"
version = "0.1.5"
authors = ["Daniel Mueller <deso@posteo.net>"]
edition = "2021"
rust-version = "1.70"
license = "GPL-3.0-or-later"
homepage = "https://github.com/d-e-s-o/ssh-gpg-agent"
repository = "https://github.com/d-e-s-o/ssh-gpg-agent.git"
readme = "README.md"
categories = [
  "command-line-utilities",
  "authentication",
  "config",
  "cryptography",
  "network-programming",
]
keywords = [
  "ssh-agent",
  "ssh",
  "gpg",
  "authentication",
  "ed25519",
]
description = """
An SSH agent implementation that transparently supports PGP encrypted private SSH keys.
"""

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
incremental = false

[dependencies.anyhow]
version = "1.0.14"

[dependencies.dirs]
version = "5.0"

[dependencies.env_logger]
version = "0.10"
default-features = false

[dependencies.gpgme]
version = "0.11"

[dependencies.openssl]
version = "0.10.39"

[dependencies.log]
version = "0.4.8"

[dependencies.ssh-agent-lib]
version = "0.2.5"
features = ["agent"]

[dependencies.ssh-keys]
version = "0.1.3"

[dependencies.ring]
version = "0.17"
default-features = false
features = ["std"]
